@@ -3,6 +3,11 @@ const Order = require('../models/Order')
 const { isAuth } = require('../util')
 const router = Router()
 
+router.get("/mine", isAuth, async (req, res) => {
+  const orders = await Order.find({ user: req.user._id });
+  res.send(orders);
+})
+
 router.get("/:id", isAuth, async (req, res) => {
     const order = await Order.findOne({ _id: req.params.id });
     if (order) {
