@@ -1,7 +1,28 @@
 const {Router} = require('express')
 const User = require('../models/User')
-const { getToken } = require('../util')
+const { getToken, isAuth } = require('../util')
 const router = Router()
+
+router.put('/:id', isAuth, async (req, res) => {
+  const userId = req.params.id;
+  const user = await User.findById(userId);
+  if (user) {
+    user.name = req.body.name || user.name;
+    user.email = req.body.email || user.email;
+    user.password = req.body.password || user.password;
+    const updatedUser = await user.save();
+    res.send({
+      _id: updatedUser.id,
+      name: updatedUser.name,
+      email: updatedUser.email,
+      isAdmin: updatedUser.isAdmin,
+      token: getToken(updatedUser)
+    });
+  } else {
+    res.status(404).send({ msg: 'User Not Found' });
+  }
+
+});
 
 router.post('/signin', async (req, res) => {
   const {email, password} = req.body
