@@ -387,3 +387,17 @@ tbody>tr:nth-child(odd){
 .placeorder-actions-payment > div {
   width: 100%;
 }
+
+/* Profile */
+
+.profile{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.profile-info{
+  flex: 1 1 30rem;
+}
+.profile-orders{
+  flex: 3 1 60rem;
+} 
