@@ -1,7 +1,26 @@
 import axios from "axios";
 import Cookie from 'js-cookie';
-import { USER_SIGNIN_REQUEST, USER_SIGNIN_SUCCESS, USER_SIGNIN_FAIL,
-  USER_REGISTER_REQUEST, USER_REGISTER_SUCCESS, USER_REGISTER_FAIL} from "../types/userConstants";
+import { 
+  USER_SIGNIN_REQUEST, USER_SIGNIN_SUCCESS, USER_SIGNIN_FAIL,
+  USER_REGISTER_REQUEST, USER_REGISTER_SUCCESS, USER_REGISTER_FAIL, 
+  USER_UPDATE_REQUEST, USER_UPDATE_SUCCESS, USER_UPDATE_FAIL, USER_LOGOUT
+} from "../types/userConstants";
+
+const update = ({ userId, name, email, password }) => async (dispatch, getState) => {
+  const { userSignin: { userInfo } } = getState();
+  dispatch({ type: USER_UPDATE_REQUEST, payload: { userId, name, email, password } });
+  try {
+    const { data } = await axios.put("/api/users/" + userId,
+      { name, email, password }, {
+      headers:
+        { Authorization: `Bearer ${userInfo.token}` }
+    });
+    dispatch({ type: USER_UPDATE_SUCCESS, payload: data });
+    Cookie.set('userInfo', JSON.stringify(data));
+  } catch (error) {
+    dispatch({ type: USER_UPDATE_FAIL, payload: error.message });
+  }
+}
 
 const signin = (email, password) => async (dispatch) => {
     dispatch({ type: USER_SIGNIN_REQUEST, payload: { email, password } });
@@ -25,4 +44,9 @@ const register = (name, email, password) => async (dispatch) => {
   }
 }
 
-export { signin, register };
+const logout = () => (dispatch) => {
+  Cookie.remove("userInfo");
+  dispatch({ type: USER_LOGOUT })
+}
+
+export { signin, register, logout, update }; 
