@@ -1,7 +1,8 @@
 import {
     ORDER_CREATE_REQUEST, ORDER_CREATE_SUCCESS, ORDER_CREATE_FAIL,
     ORDER_DETAILS_REQUEST, ORDER_DETAILS_SUCCESS, ORDER_DETAILS_FAIL, 
-    ORDER_PAY_REQUEST, ORDER_PAY_SUCCESS, ORDER_PAY_FAIL
+    ORDER_PAY_REQUEST, ORDER_PAY_SUCCESS, ORDER_PAY_FAIL, 
+    MY_ORDER_LIST_REQUEST, MY_ORDER_LIST_SUCCESS, MY_ORDER_LIST_FAIL
   } from "./types/orderConstants";
   
   
@@ -36,6 +37,20 @@ import {
     }
   }
 
+  const myOrderListReducer = (state = {
+    orders: []
+  }, action) => {
+    switch (action.type) {
+      case MY_ORDER_LIST_REQUEST:
+        return { loading: true };
+      case MY_ORDER_LIST_SUCCESS:
+        return { loading: false, orders: action.payload };
+      case MY_ORDER_LIST_FAIL:
+        return { loading: false, error: action.payload };
+      default: return state;
+    }
+  }
+
   const orderPayReducer = (state = {
     order: {
       orderItems: [],
@@ -54,4 +69,4 @@ import {
     }
   }
 
-  export { orderCreateReducer, orderDetailsReducer, orderPayReducer } 
+  export { orderCreateReducer, orderDetailsReducer, orderPayReducer, myOrderListReducer }  
