@@ -6,6 +6,10 @@ export const ORDER_DETAILS_REQUEST = 'ORDER_DETAILS_REQUEST';
 export const ORDER_DETAILS_SUCCESS = 'ORDER_DETAILS_SUCCESS';
 export const ORDER_DETAILS_FAIL = 'ORDER_DETAILS_FAIL';
 
+export const MY_ORDER_LIST_REQUEST = 'MY_ORDER_LIST_REQUEST';
+export const MY_ORDER_LIST_SUCCESS = 'MY_ORDER_LIST_SUCCESS';
+export const MY_ORDER_LIST_FAIL = 'MY_ORDER_LIST_FAIL';
+
 export const ORDER_PAY_REQUEST = 'ORDER_PAY_REQUEST';
 export const ORDER_PAY_SUCCESS = 'ORDER_PAY_SUCCESS';
 export const ORDER_PAY_FAIL = 'ORDER_PAY_FAIL'; 
