@@ -1,5 +1,9 @@
-import { USER_SIGNIN_REQUEST, USER_SIGNIN_SUCCESS, USER_SIGNIN_FAIL,
-  USER_REGISTER_REQUEST, USER_REGISTER_SUCCESS, USER_REGISTER_FAIL} from "./types/userConstants";
+import { 
+  USER_SIGNIN_REQUEST, USER_SIGNIN_SUCCESS, USER_SIGNIN_FAIL,
+  USER_REGISTER_REQUEST, USER_REGISTER_SUCCESS, 
+  USER_REGISTER_FAIL, USER_UPDATE_REQUEST, USER_UPDATE_SUCCESS, 
+  USER_UPDATE_FAIL, USER_LOGOUT
+} from "./types/userConstants";
 
 const userSigninReducer = (state = { }, action) => {
     switch (action.type) {
@@ -9,8 +13,22 @@ const userSigninReducer = (state = { }, action) => {
           return { loading: false, userInfo: action.payload };
         case USER_SIGNIN_FAIL:
           return { loading: false, error: action.payload };
+        case USER_LOGOUT:
+          return {};
         default: return state;
     }
+}
+
+const userUpdateReducer = (state = {}, action) => {
+  switch (action.type) {
+    case USER_UPDATE_REQUEST:
+      return { loading: true };
+    case USER_UPDATE_SUCCESS:
+      return { loading: false, userInfo: action.payload };
+    case USER_UPDATE_FAIL:
+      return { loading: false, error: action.payload };
+    default: return state;
+  }
 }
 
 const userRegisterReducer = (state = {}, action) => {
@@ -25,4 +43,4 @@ const userRegisterReducer = (state = {}, action) => {
   }
 }
   
-export { userSigninReducer, userRegisterReducer }
+export { userSigninReducer, userRegisterReducer, userUpdateReducer }
